# FakeOS

./: .editorconfig  .gitignore  FakeOS.py  FakeOSSetUp.py  LICENSE  New_FakeOS_Test.py  README.md  apps.py  data.env  editor.pkl  logs.py  main.py  new_apps.py  pyproject.toml  requirements.txt  sample.env  setup.py
home/: test.txt
tests/: commands.py
